# cs-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FILES_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  PRODUCTION_CODE_CHECKLIST.md  README.md  README_PROD.md  chatbot.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  test_results.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes.py  schemas.py
app/config/: __init__.py  settings.py
app/core/: exceptions.py  logger.py
app/db/: models.py  repository.py
app/graph/: __init__.py  state.py  workflow.py
app/monitoring/: __init__.py  collector.py  metrics.py
app/tools/: __init__.py  agent_queue.py  cost_tracker.py  faq_kb.py  notifier.py
lightrag/: index_documents.py  requirements.txt  search.py
lightrag/config/: lightrag_init.py  settings.py
lightrag/data/: KT_FAQ_01_신청및가입.md  KT_FAQ_02_요금및결제.md  KT_FAQ_03_설치및장비.md  KT_FAQ_04_속도및품질문제.md  KT_FAQ_05_해지및이전.md
lightrag/indexing/: document_loader.py
lightrag/lightrag_data/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
output/: cs-cost-optimizer.dsl.yaml  dev-plan.md  scenario.md
tests/: conftest.py
tests/integration/: __init__.py  test_api.py  test_workflow.py
tests/scenarios/: __init__.py  test_scenarios.py
tests/unit/: __init__.py  (+6 more)
(+10 files in other folders)
