[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs-cost-optimizer-agent"
version = "0.1.0"
description = "고객센터 운영 비용 최적화 에이전트 - FAQ 자동 응답으로 상담원 투입 최소화"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0,<0.4",
    "langchain-groq>=0.2.0,<0.3",
    "langchain-community>=0.3.0,<0.4",
    "langgraph>=0.2.0,<0.3",
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: 단위 테스트",
    "integration: 통합 테스트",
    "scenario: 시나리오 테스트",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
